tests/snapshots/formats__jxl__container.jxl.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ container.jxl — 300×100, container  [0x0+0x2b5]
  ▾ JXL   [0x0+0xc]
      Size: 12  [0x0+0x4]
      Type: "JXL "  [0x4+0x4]
      Signature  [0x8+0x4]
  ▾ ftyp  [0xc+0x14]
      Size: 20  [0xc+0x4]
      Type: "ftyp"  [0x10+0x4]
      Major brand: "jxl "  [0x14+0x4]
      Minor version: 0  [0x18+0x4]
      Compatible brand: "jxl "  [0x1c+0x4]
  ▾ jxll  [0x20+0x9]
      Size: 9  [0x20+0x4]
      Type: "jxll"  [0x24+0x4]
      Level: 5  [0x28+0x1]
  ▾ Exif  [0x29+0x252]
      Size: 594  [0x29+0x4]
      Type: "Exif"  [0x2d+0x4]
      TIFF header offset: 0  [0x31+0x4]
    ▾ Exif — TIFF LE, FillyCam Model 1  [0x35+0x246]
      ▾ Header  [0x35+0x8]
          Byte order: "II" — little-endian  [0x35+0x2]
          Version: TIFF (0x2a)  [0x37+0x2]
          First IFD offset: 0x8  [0x39+0x4]
      ▾ IFD0 — FillyCam Model 1  [0x3d+0x7e]
          Entry count: 10  [0x3d+0x2]
        ▾ Make: "FillyCam"  [0x3f+0xc] → 0x1a5+0x9
            Tag: 0x10f — Make  [0x3f+0x2]
            Type: ASCII (0x2)  [0x41+0x2]
            Count: 9  [0x43+0x4]
            Value offset: 0x170  [0x47+0x4]
            Data  [0x1a5+0x9]
        ▾ Model: "FillyCam Model 1"  [0x4b+0xc] → 0x1af+0x11
            Tag: 0x110 — Model  [0x4b+0x2]
            Type: ASCII (0x2)  [0x4d+0x2]
            Count: 17  [0x4f+0x4]
            Value offset: 0x17a  [0x53+0x4]
            Data  [0x1af+0x11]
        ▾ Orientation: Top-left (normal) (0x1)  [0x57+0xc]
            Tag: 0x112 — Orientation  [0x57+0x2]
            Type: SHORT (0x3)  [0x59+0x2]
            Count: 1  [0x5b+0x4]
            Value: 01 00 00 00  |....|  [0x5f+0x4]
        ▾ XResolution: 72 — 72/1  [0x63+0xc] → 0x1c1+0x8
            Tag: 0x11a — XResolution  [0x63+0x2]
            Type: RATIONAL (0x5)  [0x65+0x2]
            Count: 1  [0x67+0x4]
            Value offset: 0x18c  [0x6b+0x4]
            Data  [0x1c1+0x8]
        ▾ YResolution: 72 — 72/1  [0x6f+0xc] → 0x1c9+0x8
            Tag: 0x11b — YResolution  [0x6f+0x2]
            Type: RATIONAL (0x5)  [0x71+0x2]
            Count: 1  [0x73+0x4]
            Value offset: 0x194  [0x77+0x4]
            Data  [0x1c9+0x8]
        ▾ ResolutionUnit: Inch (0x2)  [0x7b+0xc]
            Tag: 0x128 — ResolutionUnit  [0x7b+0x2]
            Type: SHORT (0x3)  [0x7d+0x2]
            Count: 1  [0x7f+0x4]
            Value: 02 00 00 00  |....|  [0x83+0x4]
        ▾ Software: "gen.py"  [0x87+0xc] → 0x1d1+0x7
            Tag: 0x131 — Software  [0x87+0x2]
            Type: ASCII (0x2)  [0x89+0x2]
            Count: 7  [0x8b+0x4]
            Value offset: 0x19c  [0x8f+0x4]
            Data  [0x1d1+0x7]
        ▾ DateTime: "2026:10:06 12:00:00"  [0x93+0xc] → 0x1d9+0x14
            Tag: 0x132 — DateTime  [0x93+0x2]
            Type: ASCII (0x2)  [0x95+0x2]
            Count: 20  [0x97+0x4]
            Value offset: 0x1a4  [0x9b+0x4]
            Data  [0x1d9+0x14]
        ▾ ExifIFD: 0x86  [0x9f+0xc]
            Tag: 0x8769 — ExifIFD  [0x9f+0x2]
            Type: LONG (0x4)  [0xa1+0x2]
            Count: 1  [0xa3+0x4]
            Value: 86 00 00 00  |....|  [0xa7+0x4]
          ▾ Exif IFD  [0xbb+0x2]
              Entry count: 11  [0xbb+0x2]
            ▾ ExposureTime: 0.008 — 1/125  [0xbd+0xc] → 0x1ed+0x8
                Tag: 0x829a — ExposureTime  [0xbd+0x2]
                Type: RATIONAL (0x5)  [0xbf+0x2]
                Count: 1  [0xc1+0x4]
                Value offset: 0x1b8  [0xc5+0x4]
                Data  [0x1ed+0x8]
            ▾ FNumber: 2.8 — 28/10  [0xc9+0xc] → 0x1f5+0x8
                Tag: 0x829d — FNumber  [0xc9+0x2]
                Type: RATIONAL (0x5)  [0xcb+0x2]
                Count: 1  [0xcd+0x4]
                Value offset: 0x1c0  [0xd1+0x4]
                Data  [0x1f5+0x8]
            ▾ PhotographicSensitivity: 200  [0xd5+0xc]
                Tag: 0x8827 — PhotographicSensitivity  [0xd5+0x2]
                Type: SHORT (0x3)  [0xd7+0x2]
                Count: 1  [0xd9+0x4]
                Value: c8 00 00 00  |....|  [0xdd+0x4]
            ▾ ExifVersion: "0232"  [0xe1+0xc]
                Tag: 0x9000 — ExifVersion  [0xe1+0x2]
                Type: UNDEFINED (0x7)  [0xe3+0x2]
                Count: 4  [0xe5+0x4]
                Value: 30 32 33 32  |0232|  [0xe9+0x4]
            ▾ DateTimeOriginal: "2026:10:06 12:00:00"  [0xed+0xc] → 0x1fd+0x14
                Tag: 0x9003 — DateTimeOriginal  [0xed+0x2]
                Type: ASCII (0x2)  [0xef+0x2]
                Count: 20  [0xf1+0x4]
                Value offset: 0x1c8  [0xf5+0x4]
                Data  [0x1fd+0x14]
            ▾ ExposureBiasValue: -0.3333333333333333 — -1/3  [0xf9+0xc] → 0x211+0x8
                Tag: 0x9204 — ExposureBiasValue  [0xf9+0x2]
                Type: SRATIONAL (0xa)  [0xfb+0x2]
                Count: 1  [0xfd+0x4]
                Value offset: 0x1dc  [0x101+0x4]
                Data  [0x211+0x8]
            ▾ Flash: 0x19 [FIRED | MODE_AUTO]  [0x105+0xc]
                Tag: 0x9209 — Flash  [0x105+0x2]
                Type: SHORT (0x3)  [0x107+0x2]
                Count: 1  [0x109+0x4]
                Value: 19 00 00 00  |....|  [0x10d+0x4]
            ▾ UserComment: "hello exif" — ASCII  [0x111+0xc] → 0x219+0x12
                Tag: 0x9286 — UserComment  [0x111+0x2]
                Type: UNDEFINED (0x7)  [0x113+0x2]
                Count: 18  [0x115+0x4]
                Value offset: 0x1e4  [0x119+0x4]
                Data  [0x219+0x12]
            ▾ ColorSpace: sRGB (0x1)  [0x11d+0xc]
                Tag: 0xa001 — ColorSpace  [0x11d+0x2]
                Type: SHORT (0x3)  [0x11f+0x2]
                Count: 1  [0x121+0x4]
                Value: 01 00 00 00  |....|  [0x125+0x4]
            ▾ InteroperabilityIFD: 0x152  [0x129+0xc]
                Tag: 0xa005 — InteroperabilityIFD  [0x129+0x2]
                Type: LONG (0x4)  [0x12b+0x2]
                Count: 1  [0x12d+0x4]
                Value: 52 01 00 00  |R...|  [0x131+0x4]
              ▾ Interoperability IFD  [0x187+0x2]
                  Entry count: 2  [0x187+0x2]
                ▾ InteroperabilityIndex: "R98"  [0x189+0xc]
                    Tag: 0x1 — InteroperabilityIndex  [0x189+0x2]
                    Type: ASCII (0x2)  [0x18b+0x2]
                    Count: 4  [0x18d+0x4]
                    Value: 52 39 38 00  |R98.|  [0x191+0x4]
                ▾ InteroperabilityVersion: "0100"  [0x195+0xc]
                    Tag: 0x2 — InteroperabilityVersion  [0x195+0x2]
                    Type: UNDEFINED (0x7)  [0x197+0x2]
                    Count: 4  [0x199+0x4]
                    Value: 30 31 30 30  |0100|  [0x19d+0x4]
                  Next IFD offset: 0x0  [0x1a1+0x4]
            ▾ LensSpecification — [24/1, 70/1, 28/10, 28/10]  [0x135+0xc] → 0x22b+0x20
                Tag: 0xa432 — LensSpecification  [0x135+0x2]
                Type: RATIONAL (0x5)  [0x137+0x2]
                Count: 4  [0x139+0x4]
                Value offset: 0x1f6  [0x13d+0x4]
              ▾ Values — 4 values  [0x22b+0x20]
                  [0]: 24 — 24/1  [0x22b+0x8]
                  [1]: 70 — 70/1  [0x233+0x8]
                  [2]: 2.8 — 28/10  [0x23b+0x8]
                  [3]: 2.8 — 28/10  [0x243+0x8]
              Next IFD offset: 0x0  [0x141+0x4]
        ▾ GPSInfo: 0x110  [0xab+0xc]
            Tag: 0x8825 — GPSInfo  [0xab+0x2]
            Type: LONG (0x4)  [0xad+0x2]
            Count: 1  [0xaf+0x4]
            Value: 10 01 00 00  |....|  [0xb3+0x4]
          ▾ GPS IFD  [0x145+0x2]
              Entry count: 5  [0x145+0x2]
            ▾ GPSVersionID: 02 03 00 00  |....| — 4 bytes  [0x147+0xc]
                Tag: 0x0 — GPSVersionID  [0x147+0x2]
                Type: BYTE (0x1)  [0x149+0x2]
                Count: 4  [0x14b+0x4]
                Value: 02 03 00 00  |....|  [0x14f+0x4]
              ▾ Values — 4 values  [0x14f+0x4]
                  [0]: 2  [0x14f+0x1]
                  [1]: 3  [0x150+0x1]
                  [2]: 0  [0x151+0x1]
                  [3]: 0  [0x152+0x1]
            ▾ GPSLatitudeRef: "N"  [0x153+0xc]
                Tag: 0x1 — GPSLatitudeRef  [0x153+0x2]
                Type: ASCII (0x2)  [0x155+0x2]
                Count: 2  [0x157+0x4]
                Value: 4e 00 00 00  |N...|  [0x15b+0x4]
            ▾ GPSLatitude — [46/1, 3/1, 1234/100]  [0x15f+0xc] → 0x24b+0x18
                Tag: 0x2 — GPSLatitude  [0x15f+0x2]
                Type: RATIONAL (0x5)  [0x161+0x2]
                Count: 3  [0x163+0x4]
                Value offset: 0x216  [0x167+0x4]
              ▾ Values — 3 values  [0x24b+0x18]
                  [0]: 46 — 46/1  [0x24b+0x8]
                  [1]: 3 — 3/1  [0x253+0x8]
                  [2]: 12.34 — 1234/100  [0x25b+0x8]
            ▾ GPSLongitudeRef: "E"  [0x16b+0xc]
                Tag: 0x3 — GPSLongitudeRef  [0x16b+0x2]
                Type: ASCII (0x2)  [0x16d+0x2]
                Count: 2  [0x16f+0x4]
                Value: 45 00 00 00  |E...|  [0x173+0x4]
            ▾ GPSLongitude — [14/1, 30/1, 0/1]  [0x177+0xc] → 0x263+0x18
                Tag: 0x4 — GPSLongitude  [0x177+0x2]
                Type: RATIONAL (0x5)  [0x179+0x2]
                Count: 3  [0x17b+0x4]
                Value offset: 0x22e  [0x17f+0x4]
              ▾ Values — 3 values  [0x263+0x18]
                  [0]: 14 — 14/1  [0x263+0x8]
                  [1]: 30 — 30/1  [0x26b+0x8]
                  [2]: 0 — 0/1  [0x273+0x8]
              Next IFD offset: 0x0  [0x183+0x4]
          Next IFD offset: 0x0  [0xb7+0x4]
  ▾ xml   [0x27b+0x14]
      Size: 20  [0x27b+0x4]
      Type: "xml "  [0x27f+0x4]
    ▾ XMP  [0x283+0xc]
        ! unsupported: unrecognized format [0x283+0xc]
  ▾ jxlp — 300×100  [0x28f+0x12]
      Size: 18  [0x28f+0x4]
      Type: "jxlp"  [0x293+0x4]
      Index: 0  [0x297+0x4]
    ▾ Codestream (first part) — 300×100, codestream  [0x29b+0x6]
        Signature — FF 0A  [0x29b+0x2]
      ▾ Size header — 300×100  [0x29d+0x4]
          Width: 300  [0x29d+0x4]
          Height: 100  [0x29d+0x4]
        Image metadata, frames  [0x2a1+0x0]
  ▾ jxlp  [0x2a1+0x14]
      Size: 20  [0x2a1+0x4]
      Type: "jxlp"  [0x2a5+0x4]
      Index: 2147483649 — last part  [0x2a9+0x4]
      Partial codestream  [0x2ad+0x8]
